fix all css in head (w3c), fix slideshow on mobile

--- a/packages/silex-lib/static/2.12/front-end.css
+++ b/packages/silex-lib/static/2.12/front-end.css
@@ -21,6 +21,7 @@ body {
 /* in case the element is not position: absolute */
 :not(.section-element) > .silex-element-content {
     width: inherit;
+    min-width: inherit;
     min-height: inherit;
     height: inherit;
 }
